Cleaning up iRobot details

--- a/resume.html
+++ b/resume.html
@@ -67,8 +67,7 @@
                     </div>
                     <div class="col-sm-7">
                         <div class="inner-text">
-                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer">
-                                <b>DSP Software Engineer</b></a> at DSP Concepts<br>
+                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
                                 <li>Manage unit testing effort by adopting Googletest C++ framework</li>
                                 <li>Implement a Python interface for the embedded C real-time audio library</li>
@@ -112,9 +111,9 @@
                                 <li>Supported uptime of simulated robots in
                                     <a class="discrete-links" href="https://aws.amazon.com/robomaker/">AWS Robomaker</a>
                                     running 50 mission hours every day</li>
-                                <li>Enhanced automatic log extraction to evaluate simulated robot performance for every
-                                    robot cleaning mission and auto-populate online reports through SQL queries</li>
-                                <li>Reviewed contributions to 3 different code repositories in C++, ROS, and Python</li>
+                                <li>Enhanced automatic log extraction to evaluate simulated robot performance and
+                                    auto-populated online reports for upper management through SQL queries</li>
+                                <li>Reviewed C++, ROS, and Python contributions to 3 different code repositories</li>
                                 <li>Supported Scrum policy changes to improve feature reporting and delivery</li>
                             </ul>
                         </div>
@@ -131,11 +130,11 @@
                             <i>Automation Infrastructure Developer</i>
                             <ul>
                                 <li>Architected new company-wide Python automation for robot software testing</li>
-                                <li>Automated robot log file evaluation, reducing manual log review time by 5
-                                    hours/week</li>
-                                <li>Reduced manual testing time by 30% through weekly 1:1 training sessions</li>
+                                <li>Automated robot log file evaluation, reducing manual log review time by 5 hours per week</li>
+                                <li>Reduced manual testing time by 30% through weekly team training sessions of the automation platform</li>
                                 <li>Collaborated with an 8-person team to deliver new software features every 3 weeks</li>
-                                <li>Pioneered 466 code standards in Pylint and distributed Sphinx code documentation</li>
+                                <li>Pioneered 466 code standards in Pylint/Pycodestyle/Pydocstyle, and distributed over
+                                    2000 function docstrings as Sphinx code documentation</li>
                             </ul>
                         </div>
                     </div>
@@ -148,15 +147,18 @@
                 <div class="row middle-row">
                     <div class="col-sm-offset-3 col-sm-7">
                         <div class="inner-text">
-                            <i>Product Delivery QA</i>
+                            <i>Product Delivery Quality Assurance Engineer</i>
                             <ul>
-                                <li>Designed 40% of manual test plan for next-gen autonomous cleaning robot software</li>
+                                <li>Designed 138 test cases (40% of the entire test plan) for smarter navigation,
+                                    intuitive user interaction, and mission stability features for next-gen autonomous
+                                    cleaning robot software</li>
                                 <li>Assisted factory operations in quality assurance for release of the
-                                    <a class="discrete-links" href="https://store.irobot.com/default/floor-mopping-braava-robot-mop-irobot-braava-jet-m6/m611020.html">Braava Jet m6</a>
+                                    <a class="discrete-links" href="https://www.irobot.com/en_US/wi-fi-connected-braava-jet-m6-robot-mop/M611020.html">Braava Jet m6</a>
                                     robot</li>
-                                <li>Authored first comprehensive documentation of terms and acronyms used at iRobot</li>
-                                <li>Mentored an undergraduate intern for 3 months validating new product delivery features
+                                <li>Authored first comprehensive documentation of the 362 terms and acronyms used at iRobot</li>
+                                <li>Mentored sole undergraduate intern for 3 months validating new product delivery features
                                     and development of Linux process monitoring system for new automation</li>
+                                <li>Documented technical processes for new team member education and cross-team support</li>
                             </ul>
                         </div>
                     </div>
