--- a/resume.html
+++ b/resume.html
@@ -48,8 +48,8 @@
                     </div>
                     <div class="col-sm-7">
                         <div class="inner-text">
-                            Certified Scrum Master <b>(CSM)</b><br>
-                            Certified Scrum Product Owner <b>(CSPO)</b><br>
+                            <a class="discrete-links" href="https://bcert.me/bc/html/show-badge.html?b=hzgorods">Certified Scrum Master</a> <b>(CSM)</b><br>
+                            <a class="discrete-links" href="https://bcert.me/bc/html/show-badge.html?b=bilcqcqa">Certified Scrum Product Owner</a> <b>(CSPO)</b><br>
                         </div>
                     </div>
                     <div class="col-sm-2">
