DSPC work updates

--- a/resume.html
+++ b/resume.html
@@ -88,11 +88,12 @@
                             <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer">
                                 <b>QA Test Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Architect a new Python package for Jenkins build system and internal developers for
+                                <li>Architected a new Python package for Jenkins build system and internal developers for
                                     embedded testing and automated deployment</li>
-                                <li>Extend audio modules and regression test scripts for the AudioWeaver MATLAB platform</li>
-                                <li>Built software test plan for embedded software products, across many board architectures</li>
-                                <li>Established code quality analysis and automated reporting for MISRA compliance</li>
+                                <li>Extended regression test scripts for the Audio Weaver MATLAB platform</li>
+                                <li>Built software test plan for embedded software products, across several supported
+                                    board architectures</li>
+                                <li>Established code quality analysis and automated MISRA compliance reports</li>
                             </ul>
                         </div>
                     </div>
