Fixing IDs to non-space characters

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div id="WORK EXPERIENCE">
+            <div id="WORK-EXPERIENCE">
                 <div class="row top-row">
                     <div class="col-sm-3">
                         <h3 class="thin-headers"><a class="discrete-links" href="/work/index.html">WORK EXPERIENCE</a></h3>
@@ -434,7 +434,7 @@
                     </div>
                 </div>
             </div>
-            <div id="RELEVANT SKILLS">
+            <div id="RELEVANT-SKILLS">
                 <div class="row">
                     <div class="col-sm-3">
                         <h3 class="thin-headers">RELEVANT SKILLS</h3>
@@ -557,7 +557,7 @@
                 </div>
             </div>
             </div>
-            <div id="LEADERSHIP POSITIONS">
+            <div id="LEADERSHIP-POSITIONS">
                 <div class="row top-row">
                     <div class="col-sm-3">
                         <h3 class="thin-headers">LEADERSHIP POSITIONS</h3>
@@ -625,7 +625,7 @@
                 </div>
             </div>
             </div>
-            <div id="COMMUNITY SERVICE">
+            <div id="COMMUNITY-SERVICE">
                 <div class="row">
                 <div class="col-sm-3">
                     <h3 class="thin-headers">COMMUNITY SERVICE</h3>
