--- a/resume.html
+++ b/resume.html
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row bottom-row">
+            <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
                         <b><a class="discrete-links" href="/work/student-life.html#community-advisor">Community Advisor</a></b> at Carnegie Mellon University
@@ -195,8 +195,27 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div class="inner-text timeframe">
+                    <div class="inner-text">
                         <i>January 2016 - May 2017</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <b><a class="discrete-links" href="/work/rentwell.html">Contract Revonator/Office Assistant</a></b> at Your Local Leasing Company
+                        <ul>
+                            <li>Assisted Project Manager with renovation, demolition, and construction of rental properties
+                                using hand tools, power machinery, and electrical wiring</li>
+                            <li>Supported rental office by attentively stocking supplies, developing customer relations,
+                                and hand-delivering property notices to tenants</li>
+                            <li>Managed customer records, organized online documents, wired new phone system</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>June 2013 - August 2013</i>
                     </div>
                 </div>
             </div>
