I guess this class was already on master?

--- a/resume.html
+++ b/resume.html
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div class="inner-text">
+                    <div class="inner-text timeframe">
                         <i>January 2016 - May 2017</i>
                     </div>
                 </div>
