--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 <figure class="col-md-6">
                     <div class="overlay-box">
                         <a href="/resume.html">
-                            <img src="/images/homeimg.jpg" class="img-thumbnail" alt="Resume Website">
+                            <img src="/images/homeimg.jpg" class="img-thumbnail" alt="Access my Resume Website">
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
                                         <br>
                                         <br>
-                                        Online Resume Website:<br>
-                                        David Buzzell
+                                        Online Resume:<br>
+                                        Professional Work
                                     </p>
                                 </div>
                             </div>
@@ -71,16 +71,16 @@
                 </figure>
                 <figure class="col-md-6">
                     <div class="overlay-box">
-                        <a href="https://music.davidbuzzell.com/love-is-dead">
-                            <img src="/images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Love is Dead">
+<!--                    <a href="https://music.davidbuzzell.com/love-is-dead"> -->
+                        <a href="https://davidbuzzell.bandcamp.com/">
+                            <img src="/images/5sog-demo-pic.jpg" class="img-thumbnail" alt="Access my Music Production Website">
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
                                         <br>
                                         <br>
-                                        Love is Dead:<br>
-                                        Five Stages of Grief<br>
-                                        Production Blog
+                                        Music Production:<br>
+                                        Tracks and Materials
                                     </p>
                                 </div>
                             </div>
