75: writeup of Manager position at DSPC

--- a/resume.html
+++ b/resume.html
@@ -48,18 +48,39 @@
                     </div>
                     <div class="col-sm-7">
                         <div class="inner-text">
-                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
+                            <a class="discrete-links" href="/work/dspc.html#manager"><b>Manager</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Manage unit testing effort by adopting Googletest C++ framework</li>
-                                <li>Implement a Python interface for the embedded C real-time audio library</li>
-                                <li>Architect a reimplementation of the audio signal designer tool for PC</li>
-                                <li>Update DSP audio blocks across several supported embedded targets</li>
+                                <li>Train 3 full-time and mentor 3 intern engineers on effective task prioritization, team collaboration, and technical implementation</li>
+                                <li>Review the requirements, design, and implementation of all changes to the MATLAB codebase</li>
+                                <li>Triage all requested features and reported defects from customers and stakeholders into 6 on-time product releases per year</li>
+                                <li>Spearhead new process for a Rank Ordered Product Backlog of over 700 items into 25 unique categories</li>
+                                <li>Revamp the Continuous Integration pipeline to achieve processes under ASPICE software compliance</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="inner-text">
-                            <i>July 2021 - present</i>
+                            <i>March 2023 - present</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="row middle-row">
+                    <div class="col-sm-offset-3 col-sm-7">
+                        <div class="inner-text">
+                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
+                            <ul>
+                                <li>Architected the Interpreted Modules feature that enables external distribution of IP through the MATLAB Compiled Runtime</li>
+                                <li>TODO</li>
+                                <li>Managed unit testing effort by adopting Googletest C++ framework</li>
+                                <li>Implemented a Python interface for the embedded C real-time audio library</li>
+                                <li>Updated DSP audio blocks across several supported embedded targets</li>
+                                <li>Responsible for software maintenance of multiple codebases...</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="inner-text">
+                            <i>July 2021 - March 2023</i>
                         </div>
                     </div>
                 </div>
@@ -69,7 +90,7 @@
                             <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer">
                                 <b>QA Test Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Architected a new Python package for Jenkins build system and internal developers for
+                                <li>Introduced a new Python package for Jenkins build system and internal developers for
                                     embedded testing and automated deployment</li>
                                 <li>Extended regression test scripts for the Audio Weaver MATLAB platform</li>
                                 <li>Built software test plan for embedded software products, across several supported
