--- a/resume.html
+++ b/resume.html
@@ -69,12 +69,10 @@
                         <div class="inner-text">
                             <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Architected the Interpreted Modules feature that enables external distribution of IP through the MATLAB Compiled Runtime</li>
-                                <li>TODO</li>
-                                <li>Managed unit testing effort by adopting Googletest C++ framework</li>
-                                <li>Implemented a Python interface for the embedded C real-time audio library</li>
-                                <li>Updated DSP audio blocks across several supported embedded targets</li>
-                                <li>Responsible for software maintenance of multiple codebases...</li>
+                                <li>Architected the Interpreted Modules feature that enables external distribution of Audio IP through the MATLAB Compiled Runtime</li>
+                                <li>Productized a Python interface for the Audio Weaver Core real-time audio library</li>
+                                <li>Developed Android App with embedded Audio Weaver for an electric scooter manufacturer</li>
+                                <li>Responsible for the software maintenance of multiple codebases across several supported board architectures</li>
                             </ul>
                         </div>
                     </div>
@@ -87,14 +85,12 @@
                 <div class="row middle-row">
                     <div class="col-sm-offset-3 col-sm-7">
                         <div class="inner-text">
-                            <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer">
-                                <b>QA Test Software Engineer</b></a> at DSP Concepts<br>
+                            <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer"><b>QA Test Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
                                 <li>Introduced a new Python package for Jenkins build system and internal developers for
                                     embedded testing and automated deployment</li>
-                                <li>Extended regression test scripts for the Audio Weaver MATLAB platform</li>
-                                <li>Built software test plan for embedded software products, across several supported
-                                    board architectures</li>
+                                <li>Expanded regression test scripts for the Audio Weaver MATLAB platform</li>
+                                <li>Authored and executed novel software test plan for embedded software products</li>
                                 <li>Established code quality analysis and automated MISRA compliance reports</li>
                             </ul>
                         </div>
