finished paper resumes

--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@
                                 <li>Architected the Interpreted Modules feature that enables external distribution of Audio IP through the MATLAB Compiled Runtime</li>
                                 <li>Productized a Python interface for the Audio Weaver Core real-time audio library</li>
                                 <li>Developed Android App with embedded Audio Weaver for an electric scooter manufacturer</li>
-                                <li>Responsible for the software maintenance of multiple codebases across several supported board architectures</li>
+                                <li>Responsible for the software maintenance of over 150 repositories across 30 supported targets</li>
                             </ul>
                         </div>
                     </div>
@@ -87,8 +87,7 @@
                         <div class="inner-text">
                             <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer"><b>QA Test Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Introduced a new Python package for Jenkins build system and internal developers for
-                                    embedded testing and automated deployment</li>
+                                <li>Architected a new Python package for Jenkins build system and internal developers for embedded testing and automated deployment</li>
                                 <li>Expanded regression test scripts for the Audio Weaver MATLAB platform</li>
                                 <li>Authored and executed novel software test plan for embedded software products</li>
                                 <li>Established code quality analysis and automated MISRA compliance reports</li>
