updated front page to new title

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <section class="container">
             <div class="jumbotron">
                 <h1><a href="mailto:mail@davidbuzzell.com" id="name_header">David Buzzell</a></h1>
-                <h3>SQA Engineer at DSP Concepts</h3>
-                <h3>Bachelor of Science: Electrical & Computer Engineering, Music & Technology</h3>
+                <h3>Software Development Manager at DSP Concepts</h3>
             </div>
             <div class="well">
                 <p id="welltext">
