--- a/resume.html
+++ b/resume.html
@@ -48,32 +48,48 @@
                     </div>
                     <div class="col-sm-7">
                         <div class="inner-text">
-                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
+                            <a class="discrete-links" href="/work/dspc.html#manager"><b>Manager</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Manage unit testing effort by adopting Googletest C++ framework</li>
-                                <li>Implement a Python interface for the embedded C real-time audio library</li>
-                                <li>Architect a reimplementation of the audio signal designer tool for PC</li>
-                                <li>Update DSP audio blocks across several supported embedded targets</li>
+                                <li>Train 3 full-time and mentor 3 intern engineers on effective task prioritization, team collaboration, and technical implementation</li>
+                                <li>Review the requirements, design, and implementation of all changes to the MATLAB codebase</li>
+                                <li>Triage all requested features and reported defects from customers and stakeholders into 6 on-time product releases per year</li>
+                                <li>Spearhead new process for a Rank Ordered Product Backlog of over 700 items into 25 unique categories</li>
+                                <li>Revamp the Continuous Integration pipeline to achieve processes under ASPICE software compliance</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-sm-2">
                         <div class="inner-text">
-                            <i>July 2021 - present</i>
+                            <i>March 2023 - present</i>
                         </div>
                     </div>
                 </div>
                 <div class="row middle-row">
                     <div class="col-sm-offset-3 col-sm-7">
                         <div class="inner-text">
-                            <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer">
-                                <b>QA Test Software Engineer</b></a> at DSP Concepts<br>
+                            <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer"><b>DSP Software Engineer</b></a> at DSP Concepts<br>
                             <ul>
-                                <li>Architected a new Python package for Jenkins build system and internal developers for
-                                    embedded testing and automated deployment</li>
-                                <li>Extended regression test scripts for the Audio Weaver MATLAB platform</li>
-                                <li>Built software test plan for embedded software products, across several supported
-                                    board architectures</li>
+                                <li>Architected the Interpreted Modules feature that enables external distribution of Audio IP through the MATLAB Compiled Runtime</li>
+                                <li>Productized a Python interface for the Audio Weaver Core real-time audio library</li>
+                                <li>Developed Android App with embedded Audio Weaver for an electric scooter manufacturer</li>
+                                <li>Responsible for the software maintenance of over 150 repositories across 30 supported targets</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="inner-text">
+                            <i>July 2021 - March 2023</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="row middle-row">
+                    <div class="col-sm-offset-3 col-sm-7">
+                        <div class="inner-text">
+                            <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer"><b>QA Test Software Engineer</b></a> at DSP Concepts<br>
+                            <ul>
+                                <li>Architected a new Python package for Jenkins build system and internal developers for embedded testing and automated deployment</li>
+                                <li>Expanded regression test scripts for the Audio Weaver MATLAB platform</li>
+                                <li>Authored and executed novel software test plan for embedded software products</li>
                                 <li>Established code quality analysis and automated MISRA compliance reports</li>
                             </ul>
                         </div>
