--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,18 @@
     </head>
     <body>
         <section class="container">
-            <div class="page-header">
+            <div class="row page-header">
                 <h1>Resume</h1>
-                <a class="btn btn-primary btn-lg" href="/documents/resume-website/resume-david-buzzell.pdf" role="button">
-                    <span class="glyphicon glyphicon-file"></span> View PDF
-                </a>
+                <div class="col-md-offset-3 col-md-3 button-box">
+                    <a class="btn btn-primary btn-lg" href="/documents/resume-website/resume-david-buzzell.pdf" role="button">
+                        <span class="glyphicon glyphicon-print"></span> View PDF
+                    </a>
+                </div>
+                <div class="col-md-3 button-box">
+                    <a class="btn btn-primary btn-lg" href="/documents/resume-website/resume-david-buzzell.txt" role="button">
+                        <span class="glyphicon glyphicon-pencil"></span> View TXT
+                    </a>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
